# data-forge

./: .env.example  .gitignore  CICD.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: build-executables.yml  publish-pypi.yml
scripts/: setup.bat  setup.ps1  setup.sh
src/dataforge/: __init__.py  main.py
src/dataforge/agents/: __init__.py  base.py  explorer.py  exporter.py  generator.py  orchestrator.py  processor.py  quality.py  reviewer.py  scraper.py
src/dataforge/cli/: __init__.py  app.py  dataforge_file.py  preflight.py  prefs.py  prompts.py  tips.py  ui.py  url_review.py
src/dataforge/collectors/: __init__.py  crawler.py  extractor.py  http.py  sitemap.py
src/dataforge/config/: __init__.py  providers.py  settings.py
src/dataforge/exporters/: __init__.py  huggingface.py  kaggle_exp.py  local.py
src/dataforge/generators/: __init__.py  llm.py  synthetic.py  templates.py
src/dataforge/processors/: __init__.py  chunker.py  cleaner.py  formatter.py
src/dataforge/storage/: __init__.py  database.py  models.py
src/dataforge/utils/: __init__.py  errors.py  logger.py  rate_limiter.py  system.py  url_sanitiser.py
tests/: conftest.py  test_collectors.py  test_explorer.py  test_generators.py  test_processors.py  test_quality_and_lang.py  test_sitemap.py  test_url_review.py
