[project]
name = "llm-web-crawler"
version = "0.3.2"
description = "LLM data collection and synthetic fine-tuning dataset pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "questionary>=2.0",
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5",
    "litellm>=1.40",
    "sqlmodel>=0.0.18",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "huggingface-hub>=0.23",
    "kaggle>=1.6",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "xmltodict>=0.13",
    "markdownify>=0.12",
    "tiktoken>=0.7",
    "datasets>=2.20",
    "psutil>=5.9",
    "aiofiles>=23",
    "pyarrow>=16",
    "jinja2>=3.1",
    # robotparser is part of Python stdlib (urllib.robotparser) — no extra package needed
]

[project.optional-dependencies]
unsloth = ["unsloth>=2024.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "respx>=0.21",
    "pyinstaller>=6",
]

[project.scripts]
dataforge = "dataforge.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataforge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/dataforge --cov-report=term-missing -q"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
